# convergio-file-transport

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-file-transport/: Cargo.toml
crates/convergio-file-transport/src/: ext.rs  lib.rs  mcp_defs.rs  routes.rs  rsync.rs  schema.rs  transfer.rs  types.rs
crates/convergio-file-transport/tests/: e2e.rs  e2e_routes.rs
docs/adr/: 001-extraction.md
